@@ -1,4 +1,12 @@
 
+2021-01-12  Ron Norman <rjn@inglenet.com> 
+
+	* fileio.c: Added a flag 'config' to the table of I/O modules
+				so that it is now which ones had been configured 
+	* fisam.c: Additional work for ISAM logging/transaction ability
+	           VB-ISAM 2.2 in default and CISAM mode works fine
+			   D-ISAM 7.2 is also working in transaction mode
+
 2021-01-10  Ron Norman <rjn@inglenet.com> 
 
 	* fisam.c: Additional work for ISAM logging/transaction ability
